# edv

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: docs.yml
docs-en/: 01_implementation_plan.md  02_development_phases.md  03_module_implementation.md  04_testing_strategy.md  coding_guidelines.md
docs-en/00_technical_documentation/: README.md
docs-en/01_implementation_plan/: 01_overview.md  02_strategy.md  03_phases_overview.md  04_timeline.md  05_priorities.md  06_risk_management.md  07_quality_assurance.md
docs-en/02_development_phases/: 01_phase1_core_infrastructure.md  02_phase2_extended_functionality.md  03_phase3_advanced_features.md  04_phase4_optimization.md
docs-en/03_modules/: 00_architecture_overview.md  01_cli_module.md  02_core_module.md  03_processing_module.md  04_project_module.md  05_asset_module.md  06_utility_module.md  09_ffmpeg_module.md
docs-en/04_testing/: 01_testing_philosophy.md  02_unit_testing.md  03_integration_testing.md  04_system_and_performance_testing.md  05_testing_tools_and_automation.md  06_challenges_and_success_criteria.md
docs-ja/: 01_基本設計書.md  02_詳細設計書1_ブラックボックステストレベル.md  03_詳細設計書2_ホワイトボックステストレベル.md  コーディングガイドライン.md
docs-ja/00_技術ドキュメント/: README.md
docs-ja/01_ユーザーガイド/: README.md  index.md
edv/: all.html  index.html  sidebar-items.js
edv/audio/: index.html  sidebar-items.js
edv/cli/: enum.Error.html  fn.run.html  index.html  sidebar-items.js  struct.App.html  struct.CommandRegistry.html  struct.OutputFormatter.html  struct.ProgressReporter.html  trait.Command.html  type.Result.html
edv/core/: enum.Error.html  enum.LogLevel.html  index.html  sidebar-items.js  struct.Config.html  struct.Context.html  trait.Logger.html  type.Result.html
edv/ffmpeg/: enum.Error.html  index.html  sidebar-items.js  struct.FFmpeg.html  struct.FormatInfo.html  struct.MediaInfo.html  struct.StreamInfo.html  struct.Version.html  type.Result.html
edv/gui/: index.html  sidebar-items.js
edv/processing/: index.html
edv/project/: enum.ProjectError.html  index.html  sidebar-items.js  struct.AssetId.html  struct.AssetMetadata.html  struct.AssetReference.html  struct.ClipId.html  struct.Project.html  struct.ProjectId.html  (+2 more)
examples/: README.md  advanced_multi_track_demo.rs  multi_track_demo.rs  multi_track_keyframe_demo.rs
src/: lib.rs  main.rs
(+512 files in other folders)
