[package]
name = "edv"
version = "0.1.0"
edition = "2024"
description = "A video editing tool with focus on simplicity and performance"
authors = ["EDV Team"]
license = "MIT"

[lib]
name = "edv"
path = "src/lib.rs"

[[bin]]
name = "edv"
path = "src/main.rs"

# 警告無視の設定を追加
[lints.rust]
dead_code = "allow"

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
which = "4.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
mime_guess = "2.0"
num_cpus = "1.16.0"
rayon = "1.8.0"
sdl2 = "0.35"
image = "0.24"
